# Camera_Detection

JQHttpServer-master/demos/Http/HttpServerDemo/cpp/: main.cpp
JQHttpServer-master/demos/Https/HttpsClientDemo/: HttpsClientDemo.pro
JQHttpServer-master/demos/Https/HttpsClientDemo/cpp/: main.cpp
JQHttpServer-master/demos/Https/HttpsServerDemo/cpp/: main.cpp
Rtsp_Camera/: Rtsp_Camera.pro
Rtsp_Camera/include/: ffmpeg_h264.h  rtsp_client.h
Rtsp_Camera/src/: ffmpeg_h264.cpp  main.cpp  rtsp_client.cpp
tensorflow-object-detection-cpp/: CMakeLists.txt  main.cpp  utils.cpp
